# TARSIS-ETC

./: CMakeLists.txt
.github/actions/linuxdeps/: action.yml
.github/actions/macosdeps/: action.yml
.github/workflows/: ci.yml
CalGUI/: CMakeLists.txt  CalculationWorker.cpp  CalculationWorker.h  GUIHelpers.cpp  GUIHelpers.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RangeLimitedValueAxis.cpp  ZoomableChart.cpp  ZoomableChartView.cpp  ZoomableChartView.h  ZoomableChartWidget.cpp  ZoomableChartWidget.h  ZoomableChartWidget.ui  icons.qrc  main.cpp
CalGUI/icons/: CalGUI.icns
Calculator/: CMakeLists.txt
Calculator/src/: main.cpp
LibETC/: CMakeLists.txt
LibETC/include/: ConfigManager.h  Curve.h  DataFileManager.h  Detector.h  Helpers.h  InstrumentModel.h  Simulation.h  SkyModel.h  Spectrum.h
LibETC/src/: ConfigManager.cpp  Curve.cpp  DataFileManager.cpp  Detector.cpp  InstrumentModel.cpp  Simulation.cpp  SkyModel.cpp  Spectrum.cpp
Scripts/: AppRun  dist-appimage.sh  dist-common.sh  dist-dmg.sh  makeicons-mac-im.sh  makeicons-mac.sh
data/: CAHASky.csv  CAHASkyExt.csv  blueTransmission.csv  dispersionBlue.csv  dispersionRed.csv  moonBrightness.csv  pxResolutionBlue.csv  pxResolutionRed.csv  redTransmission.csv
data/config/: detectors.yaml
